# Cherno-CPP-Notes

./: .gitattributes  .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml  translation.py
Codes/: MoveSemantic.cpp  Singleton.cpp  SmallString.cpp
Notes in Markdown/: 05 How C++ Works.md  06 How the C++ Compiler Works.md  07 How the C++ Linker Works.md  08 Variables in C++.md  09 Functions in C++.md  10 C++ Header Files.md  12 CONDITIONS and BRANCHES in C++.md  13  BEST Visual Studio Setup for C++ Projects!.md  16 POINTERS in C++.md  17 REFERENCES in C++.md  18 CLASSES in C++.md  21 Static in C++.md  22 Static for Classes and Structs in C++.md  23 Local Static in C++.md  25 Constructors in C++.md  26 Destructors in C++.md  27 Inheritance in C++.md  31 Arrays in C++.md  32 How Strings Work in C++ (and how to use them).md  35 The Mutable Keyword in C++.md  37 Ternary Operators in C++ (Conditional Assignment).md  38 How to CREATE_INSTANTIATE OBJECTS in C++.md  39 The NEW Keyword in C++.md  40 Implicit Conversion and the Explicit Keyword in C++.md  44 SMART POINTERS in C++.md  45 Copying and Copy Constructors in C++.md  46 The Arrow Operator in C++.md  48 Optimizing the usage of std - -vector in C++.md  49 Using Libraries in C++ (Static Linking).md  50 Using Dynamic Libraries in C++.md  52 How to Deal with Multiple Return Values in C++.md  54 Stack vs Heap Memory in C++.md  57 Static Arrays in C++ (std - -array).md  59 Lambdas in C++.md  60 Why I don't 'using namespace std'.md  61 Namespaces in C++.md  (+3 more)
(+384 files in other folders)
